_build/_log
### Starting build.
# Target: user.mli.depends, tags: { package(oUnit), package(yojson), extension:mli, file:user.mli, ocaml, ocamldep, quiet, traverse }
ocamlfind ocamldep -package yojson -package oUnit -modules user.mli > user.mli.depends
# Target: user.cmi, tags: { package(oUnit), package(yojson), byte, compile, extension:mli, file:user.mli, interf, ocaml, quiet, traverse }
ocamlfind ocamlc -c -package yojson -package oUnit -o user.cmi user.mli
# Target: user.ml.depends, tags: { package(oUnit), package(yojson), extension:ml, file:user.ml, ocaml, ocamldep, quiet, traverse }
ocamlfind ocamldep -package yojson -package oUnit -modules user.ml > user.ml.depends
# Target: user.cmo, tags: { package(oUnit), package(yojson), byte, compile, extension:cmo, extension:ml, file:user.cmo, file:user.ml, implem, ocaml, quiet, traverse }
ocamlfind ocamlc -c -package yojson -package oUnit -o user.cmo user.ml
+ ocamlfind ocamlc -c -package yojson -package oUnit -o user.cmo user.ml
File "user.ml", line 67, characters 2-7:
67 |   group = json |> member "in_group" |> to_list |> List.map to_int;
       ^^^^^
Error: Unbound record field group
Command exited with code 2.
# Compilation unsuccessful.
